--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 
       <div class="flex items-center gap-3">
         <button id="openNewBtn" class="flex items-center gap-2 bg-indigo-600 text-white px-4 py-2 rounded-2xl shadow hover:scale-105 transition">
-          <i data-lucide="plus-square" class="w-4 h-4"></i> Novo Aluno
+          <i data-lucide="plus-square" class="w-4 h-4"></i> + Novo Aluno
         </button>
         <div class="flex items-center gap-2">
           <button id="exportBtn" class="px-3 py-2 bg-white rounded-2xl shadow hover:bg-gray-100 transition text-sm">Exportar JSON</button>
@@ -417,3 +417,4 @@
 
 </body>
 </html>
+
