--- a/index.html
+++ b/index.html
@@ -28,9 +28,9 @@
       </div>
 
       <div class="flex items-center gap-3">
-        <button id="openNewBtn" class="flex items-center gap-2 bg-indigo-600 text-white px-4 py-2 rounded-2xl shadow hover:scale-105 transition">
-          <i data-lucide="plus-square" class="w-4 h-4"></i> Novo Aluno
-        </button>
+        <button id="openNewBtn" class="flex items-center justify-center bg-indigo-600 text-white px-6 py-2 rounded-2xl shadow hover:scale-105 transition font-medium">
+  Novo Aluno
+</button>
         <div class="flex items-center gap-2">
           <button id="exportBtn" class="px-3 py-2 bg-white rounded-2xl shadow hover:bg-gray-100 transition text-sm">Exportar JSON</button>
           <label for="importFile" class="px-3 py-2 bg-white rounded-2xl shadow hover:bg-gray-100 transition text-sm cursor-pointer">Importar</label>
@@ -417,5 +417,6 @@
 
 </body>
 </html>
+
 
 
