--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     .modal-backdrop { background: rgba(2,6,23,0.6); }
   </style>
 </head>
-<body class="min-h-screen bg-gradient-to-br from-indigo-50 via-sky-50 to-emerald-50 text-gray-800">
+<body class="bg-gradient-to-r from-blue-200 to-indigo-300 min-h-screen flex flex-col scale-[0.9] origin-top">
 
   <div class="max-w-7xl mx-auto p-6">
     <header class="flex flex-col md:flex-row items-start md:items-center justify-between gap-4 mb-6">
@@ -417,6 +417,7 @@
 
 </body>
 </html>
+
 
 
 
