--- a/index.html
+++ b/index.html
@@ -94,12 +94,9 @@
     <footer class="text-center text-xs text-gray-500 mt-6">© 2025 — Sistema Escolar Interativo</footer>
   </div>
 
-  <div id="modal" class="fixed inset-0 hidden items-center justify-center modal-backdrop z-50">
-    <div class="bg-white rounded-2xl w-full max-w-3xl p-6 shadow-xl transform transition">
-      <div class="flex items-center justify-between mb-4">
-        <h2 id="modalTitle" class="text-lg font-semibold">Novo Aluno</h2>
-        <button id="closeModal" class="text-gray-500 hover:text-gray-700">Fechar ✕</button>
-      </div>
+  <!-- Modal de Cadastro/Edição -->
+<div id="studentModal" class="hidden fixed inset-0 bg-black/50 backdrop-blur-sm flex items-center justify-center z-50">
+  <div class="bg-white p-5 rounded-2xl shadow-xl w-11/12 md:w-[450px] max-h-[80vh] overflow-y-auto transform scale-[0.9]">
 
       <form id="studentForm" class="space-y-4" autocomplete="off">
         <div class="grid grid-cols-1 md:grid-cols-2 gap-3">
@@ -417,6 +414,7 @@
 
 </body>
 </html>
+
 
 
 
