--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
   </div>
 
   <div id="modal" class="fixed inset-0 hidden items-center justify-center modal-backdrop z-50">
-    <div class="bg-white rounded-2xl w-full max-w-3xl p-6 shadow-xl transform transition">
+    <div class="bg-white rounded-2xl w-full max-w-3xl p-6 shadow-xl transform scale-[0.8] transition">
       <div class="flex items-center justify-between mb-4">
         <h2 id="modalTitle" class="text-lg font-semibold">Novo Aluno</h2>
         <button id="closeModal" class="text-gray-500 hover:text-gray-700">Fechar ✕</button>
@@ -417,6 +417,7 @@
 
 </body>
 </html>
+
 
 
 
